# Apex-Game-Engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  _clang-format
apex/: CMakeLists.txt
apex/include/apex/: apex.h  test.h
apex/include/apex/containers/: slot_map.h
apex/include/apex/core/: core.h  debug.h  dimension.h  error.h  expected.h  extent.h  handle.h  traits.h  type_list.h
apex/include/apex/event/: event.h  event_base.h  event_broker.h  event_channel.h  event_list.h  event_traits.h  scoped_subscription.h  subscription.h
apex/include/apex/media/window/: window.h  window_error.h
apex/include/apex/sync/: atomic_queue.h  broker.h  mpmc_channel.h  mpsc_channel.h  priority_broker.h  sync.h
apex/include/apex/system/: display_server.h  system.h  system_detection.h  system_error.h  system_event.h  system_event_handler.h  system_events.h  system_headers.h  system_input.h  system_key.h  system_manager.h  system_mouse.h  system_traits.h  system_traits_macos.h  system_type.h  system_window.h  system_window.inl
apex/include/apex/system/native/: macos_types.h  native_types.h
apex/src/: test.cc
apex/src/system/: system_input.cc
apex/src/system/cocoa/: apex_application.h  apex_application.mm  apex_window.h  apex_window.mm  cocoa_display.mm  cocoa_display_server.mm  keyboard.h
apex/src/system/macos/: app_delegate.h  app_delegate.mm  application.h  application.mm  autorelease_pool.h  autorelease_pool.mm  cocoa_window.h  cocoa_window.mm  system_manager_macos.cc  system_manager_macos.mm  system_window_cocoa.mm  view.swift  window_delegate.h  window_delegate.mm
apps/window/: CMakeLists.txt  window.cc
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cc
tests/integration/sync/: broker.cc  mpmc_channel.cc  mpsc_channel.cc
tests/unit/: CMakeLists.txt  main.cc
tests/unit/containers/: slot_map.cc
(+8 files in other folders)
